fix singlenewspage view styles on mobile size

--- a/public/css/singleNewsPage.css
+++ b/public/css/singleNewsPage.css
@@ -271,7 +271,7 @@ aside h4 {
     font-size: 30px;
   }
 }
-@media (max-width: 375px) {
+@media (max-width: 600px) {
   .myNews-figureCapion {
     column-count: 1;
     padding: 1rem;
